--- a/src/main/resources/template/updateUser.html
+++ b/src/main/resources/template/updateUser.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>User Management System</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <title>User Management System - Update User</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
@@ -12,23 +13,14 @@
   <h1>User Management System</h1>
   <hr>
   <h2>Update User</h2>
-  <form action="/updateUser"  method="post">
-
-    <input type="hidden" th:name="id" th:value="${user.id}" />
-
+  <form method="post" action="/updateUser" >
+    <input type="hidden" name="id" th:value="${user.id}" />
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" th:value="${user.username}" required />
-
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" th:value="${user.password}" required />
-
     <button type="submit">Update</button>
   </form>
-
-
-
-
-
   <a th:href="@{/users}"> Back to User List</a>
 </div>
 </body>
