--- a/src/main/resources/template/users.html
+++ b/src/main/resources/template/users.html
@@ -1,37 +1,4 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--  <meta charset="UTF-8">-->
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-<!--  <link rel="stylesheet" href="../static/css/users.css">-->
-<!--  <script src="../static/js/users.js"></script>-->
-<!--  <title>User List</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<h1>User List</h1>-->
-<!--<table border="1">-->
-<!--  <tr>-->
-<!--    <th>ID</th>-->
-<!--    <th>Username</th>-->
-<!--    <th>Password</th>-->
-<!--    <th>Actions</th>-->
-<!--  </tr>-->
-<!--  <tr th:each="user : ${users}">-->
-<!--    <td th:text="${user.id}"></td>-->
-<!--    <td th:text="${user.username}"></td>-->
-<!--    <td th:text="${user.password}"></td>-->
-<!--    <td>-->
-<!--      &lt;!&ndash; Thymeleaf template &ndash;&gt;-->
-<!--      <a th:href="@{/updateUser/{id}(id=${user.id})}">Update</a>-->
 
-<!--      &lt;!&ndash;      <button type="button" onclick="updateUser('${user.id}', '${user.username}', '${user.password}')">Update</button>&ndash;&gt;-->
-<!--    </td>-->
-<!--</table>-->
-<!--</div>-->
-
-
-<!--</body>-->
-<!--</html>-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -55,12 +22,19 @@
     <td th:text="${user.username}"></td>
     <td th:text="${user.password}"></td>
     <td>
-      <!-- Simple form for update -->
-      <form method="post" action="/updateUser">
-        <input type="hidden" name="id" th:value="${user.id}">
 
+
+
+      <form method="post" action="/updateUser" >
         <button type="submit">Update</button>
+        <input type="hidden" name="id" th:value="${user.id}">
+<!--        <input type="hidden" name="username" th:value="${user.username}">-->
+<!--        <input type="hidden" name="password" th:value="${user.password}">-->
+
+
+
       </form>
+
     </td>
   </tr>
 </table>
