--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="../static/css/updateForm.css">
   <title>Edit User</title>
   <!-- Add your CSS styles or include external stylesheets here -->
 </head>
@@ -17,30 +19,35 @@
     <div class="alert alert-success" role="alert">
       User updated successfully!
     </div>
-
   </div>
 
-  <!-- User edit form -->
-  <form action="/editUser" method="post">
-
-        <input type="hidden" name="id" th:value="${user.id}">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" th:value="${user.username}" required />
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" th:value="${user.password}" required />
 
 
+
+
+    <form id="userForm" action="/editUser" method="post" >
+    <input type="hidden" name="id" th:value="${user.id}">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" th:value="${user.username}" required />
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" th:value="${user.password}" required />
 
     <!-- Submit button -->
-    <button type="submit">Update User</button>
-  </form>
+      <button type="submit" class="btn btn-primary">Update</button>
+    </form>
 
   <!-- Link to go back to the user list page -->
   <a th:href="@{/users}">Back to User List</a>
+
+
+
 </div>
 
-<!-- Add your JavaScript scripts here if needed -->
 
+
+
+
+</div>
 </body>
 
 </html>
