--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/css/users.css">
   <title>User List</title>
 </head>
 <body>
-<div class="container">
+<div class="container my-2">
   <h1>User List</h1>
   <table border="1">
     <tr>
@@ -22,18 +23,20 @@
       <td th:text="${user.username}"></td>
       <td th:text="${user.password}"></td>
       <td>
-
-        <form method="post" action="/deleteUser">
-          <input type="hidden" name="_method" value="delete">
+        <!-- Delete User Form -->
+        <form method="post" action="/deleteUser" class="delete-form">
           <input type="hidden" name="id" th:value="${user.id}">
-          <button type="submit">Delete</button>
+          <button type="submit" class="btn btn-danger">Delete</button>
         </form>
 
 
-        <form method="post" action="/editUser">
-          <button type="submit">Update</button>
+        <form method="post" action="/editUser" class="update-form">
           <input type="hidden" name="id" th:value="${user.id}">
+          <button type="submit"  class="btn btn-primary">Update</button>
         </form>
+
+
+
 
       </td>
     </tr>
