--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -29,15 +29,11 @@
           <button type="submit" class="btn btn-danger">Delete</button>
         </form>
 
-
+        <!-- Update User Form -->
         <form method="post" action="/editUser" class="update-form">
           <input type="hidden" name="id" th:value="${user.id}">
-          <button type="submit"  class="btn btn-primary">Update</button>
+          <button type="submit" class="btn btn-primary">Update</button>
         </form>
-
-
-
-
       </td>
     </tr>
   </table>
@@ -45,4 +41,3 @@
 
 </body>
 </html>
-
