--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -25,19 +25,17 @@
 
 
 
-  <form method="post" th:action="@{/editUser/{id}(id=${user.id})}" class="update-form">
+  <form method="post" th:action="@{/editUser/{id}}" class="update-form">
     <input type="hidden" name="id" th:value="${user.id}">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" th:value="${user.username}" required />
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" th:value="${user.password}" required />
-
-    <!-- Submit button -->
       <button type="submit" class="btn btn-primary">Update</button>
     </form>
 
   <!-- Link to go back to the user list page -->
-<!--  <a th:href="@{/users}">Back to User List</a>-->
+  <a th:href="@{/users}">Back to User List</a>
 
 
 
