--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -48,12 +48,12 @@
             updateMessageDiv.innerText = data.updateMessage;
 
             // Delay the redirection by 2 seconds (adjust as needed)
-            setTimeout(() => {
+            // setTimeout(() => {
               // Handle the redirection manually here
               // You can redirect to the users page or any other URL
               window.location.href = '/users';
-            }, 1500);
-          }
+          //   }, 1500);
+           }
         })
         .catch(error => console.error('Error:', error));
     } else {
