--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/css/updateForm.css">
+  <script src="../static/js/editUser.js"></script>
   <title>Edit User</title>
   <!-- Add your CSS styles or include external stylesheets here -->
 </head>
@@ -29,39 +30,6 @@
   <!-- Link to go back to the user list page -->
   <a th:href="@{/users}">Back to User List</a>
 </div>
-<script th:inline="javascript">
-  function submitForm() {
-    let form = document.getElementById('updateForm');
-    let updateMessageDiv = document.getElementById('updateMessage');
-
-    // Check if the form is valid
-    if (form.checkValidity()) {
-      // Perform AJAX request using Fetch API
-      fetch(form.action, {
-        method: form.method,
-        body: new FormData(form)
-      })
-        .then(response => response.json())
-        .then(data => {
-          // Show the update message if present
-          if (data.updateMessage) {
-            updateMessageDiv.innerText = data.updateMessage;
-
-            // Delay the redirection by 2 seconds (adjust as needed)
-            // setTimeout(() => {
-              // Handle the redirection manually here
-              // You can redirect to the users page or any other URL
-              window.location.href = '/users';
-          //   }, 1500);
-           }
-        })
-        .catch(error => console.error('Error:', error));
-    } else {
-      // If the form is not valid, you can display an error message or take appropriate action
-      console.error('Form is not valid');
-    }
-  }
-</script>
 
 </body>
 
