--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,8 +39,8 @@
     <button type="button" onclick="performRegister()">Register</button>
   </form>
 
-  <!-- Display registration response message -->
-  <p id="registerResponse"></p>
+  <div id="registerResponse"></div>
+
 
 
 </div>
