--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -15,16 +15,18 @@
 <div class="container">
   <h1>Edit User</h1>
 
-  <!-- Add a div to display the update message -->
-  <div id="updateMessage" class="alert alert-success" role="alert"></div>
+  <!-- Add a div to display the update message, initially hidden -->
+  <div id="updateMessage" class="alert" role="alert" style="display: none;"></div>
+
+
 
   <form method="post" id="updateForm" th:action="@{/editUser/{id}}" class="update-form">
-    <input type="hidden" name="id" th:value="${user.id}">
+    <input type="hidden" id="id" name="id" th:value="${user.id}">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" th:value="${user.username}" required />
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" th:value="${user.password}" required />
-    <button type="button" onclick="submitForm()" class="btn btn-primary">Update</button>
+    <button type="button" onclick="submitForm()">Update</button>
   </form>
 
   <!-- Link to go back to the user list page -->
