--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -25,13 +25,13 @@
       <td>
         <!-- Delete User Form -->
         <form method="post" action="/deleteUser" class="delete-form">
-          <input type="hidden" name="id" th:value="${user.id}">
+          <input type="hidden"  name="id" th:value="${user.id}">
           <button type="submit" class="btn btn-danger">Delete</button>
         </form>
 
         <!-- Update User Form -->
         <form th:method="post" th:action="@{/editUser}" class="update-form">
-          <input type="hidden" name="id" th:value="${user.id}">
+          <input type="hidden" id="id" name="id" th:value="${user.id}">
           <button type="submit" class="btn btn-primary">Update</button>
         </form>
       </td>
