--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,17 +1,16 @@
-<!--users.html-->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<!--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
   <link rel="stylesheet" href="../static/css/users.css">
   <title>User List</title>
 </head>
 <body>
 <div class="container my-2">
   <h1>User List</h1>
-  <table border="1">
+  <table border="1" class="mb-3">
     <tr>
       <th>ID</th>
       <th>Username</th>
@@ -25,7 +24,7 @@
       <td>
         <!-- Delete User Form -->
         <form method="post" action="/deleteUser" class="delete-form">
-          <input type="hidden"  name="id" th:value="${user.id}">
+          <input type="hidden"   name="id" th:value="${user.id}">
           <button type="submit" class="btn btn-danger">Delete</button>
         </form>
 
@@ -34,10 +33,13 @@
           <input type="hidden" id="id" name="id" th:value="${user.id}">
           <button type="submit" class="btn btn-primary">Update</button>
         </form>
+
+
       </td>
     </tr>
   </table>
 </div>
+
 
 </body>
 </html>
